--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,7 @@
   padding: 20px;
 }
 
-
-.logoContainer{
+.logoContainer {
   display: flex;
   padding: 0;
   align-items: center;
@@ -19,7 +18,7 @@
   margin-bottom: 15px;
 }
 
-.logo{
+.logo {
   font-size: 25px;
   color: #4aed88;
   transition: all 0.3s;
@@ -33,14 +32,16 @@
   -webkit-background-clip: text;
   color: transparent;
 }
-/* Create a pseudo-element to act as the gradient border */
+
+/* Creating a pseudo-element to act as the gradient border */
+
 .logoText::after {
   content: "";
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 2px; 
+  height: 2px;
   background-image: linear-gradient(to right, #368654, #c3fad3, #4aed88);
   transition: all 0.5s ease-in-out;
 }
@@ -60,23 +61,25 @@
   box-shadow: 0 0 4px rgba(195, 250, 211, 0.5);
 }
 
-.inputGroup{
+.inputGroup {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
-.mainLable{
+
+.mainLable {
   margin: 20px 0;
 }
-.inputBox{
-  padding: 10px; 
+
+.inputBox {
+  padding: 10px;
   border-radius: 5px;
   outline: none;
   border: none;
   background: #eee;
   font-size: 16px;
   font-weight: bold;
-  color:#282a36;
+  color: #282a36;
 }
 
 .btn {
@@ -88,19 +91,17 @@
   transition: all 0.3s ease-in-out;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
   font-weight: bold;
+  transition: 0.3s all;
 }
 
 .btn:hover {
-  box-shadow: 0px 8px 5px rgba(0, 0, 0, 0.5);
+  box-shadow: 8px 6px 4px rgba(0, 0, 0, 0.5);
+  background-color: rgb(142, 135, 135);
 }
 
 .btn:active {
-  box-shadow: 0px 8px 4px rgba(0, 0, 0, 0.4);
-}
-
-.btn:focus {
-  outline: none;
-  box-shadow: 0px 8px 5px rgba(0, 0, 0, 0.5);
+  box-shadow: 4px 8px 4px rgba(0, 0, 0, 0.4);
+  background-color: rgb(133, 128, 128);
 }
 
 .joinBtn,
@@ -112,25 +113,19 @@
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
 }
 
-.joinBtn:hover ,
+.joinBtn:hover,
 .leaveBtn:hover {
   background: #2b824c;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
+  box-shadow: 8px 6px 4px rgba(0, 0, 0, 0.5);
 }
 
-.joinBtn:focus ,
-.leaveBtn{
-  outline: none;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
-}
-
-.joinBtn:active ,
-.leaveBtn{
+.joinBtn:active,
+.leaveBtn {
   background: #21893e;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
+  box-shadow: 4px 8px 4px rgba(0, 0, 0, 0.4);
 }
 
-.createInfo{
+.createInfo {
   text-align: center;
 }
 .createNewBtn {
@@ -152,36 +147,37 @@
   border-color: #2b6042;
 }
 
-.mainWrap{
+.mainWrap {
   display: grid;
-   grid-template-columns: 230px 1fr;
-   height: 100vh;
-  }
+  grid-template-columns: 230px 1fr;
+  height: 100vh;
+}
 
-  .aside {
-    background: #1c1e29;
-    padding: 16px;
-    display: flex;
-    flex-direction: column;
-    transition: box-shadow 250ms; 
-    box-shadow: 4px 0 8px rgba(0, 0, 0, 0.2);
-  }
-  
-  .aside:hover {
-    border-right: 2px solid  rgba(104, 134, 190, 0.3);
-  }
+.aside {
+  background: #1c1e29;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  transition: box-shadow 250ms;
+  box-shadow: 4px 0 8px rgba(0, 0, 0, 0.2);
+}
 
-.asideInner{
+.aside:hover {
+  border-right: 2px solid rgba(104, 134, 190, 0.3);
+}
+
+.asideInner {
   flex: 1;
 }
 
-.clientsList{
+.clientsList {
   display: flex;
   align-items: center;
-  flex-wrap: wrap ;
+  flex-wrap: wrap;
   gap: 10px;
 }
-.client{
+
+.client {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -191,23 +187,24 @@
 }
 
 .sb-avatar {
-  filter: drop-shadow( 3px -3px 3px rgb(22, 0, 0));
+  filter: drop-shadow(3px -3px 3px rgb(22, 0, 0));
 }
 
-.userName{
+.userName {
   margin-top: 10px;
   font-size: 12px;
 }
-.logoWraper{
-  border-bottom: 1px solid  #424242;
+
+.logoWraper {
+  border-bottom: 1px solid #424242;
 }
 
-.leaveBtn{
-  margin-top: 20px;  
+.leaveBtn {
+  margin-top: 20px;
   width: 100%;
 }
-.CodeMirror{
+
+.CodeMirror {
   min-height: 100vh;
   font-size: 20px;
 }
-
